; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_revwalk.c_get_revision.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_revwalk.c_get_revision.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@GIT_ITEROVER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, %struct.TYPE_4__*, i32**)* @get_revision to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_revision(i32** %0, %struct.TYPE_4__* %1, i32** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32**, align 8
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store i32** %0, i32*** %5, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %6, align 8
  store i32** %2, i32*** %7, align 8
  %10 = load i32**, i32*** %7, align 8
  %11 = call i32* @git_commit_list_pop(i32** %10)
  store i32* %11, i32** %9, align 8
  %12 = load i32*, i32** %9, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %17, label %14

14:                                               ; preds = %3
  %15 = call i32 (...) @git_error_clear()
  %16 = load i32, i32* @GIT_ITEROVER, align 4
  store i32 %16, i32* %4, align 4
  br label %34

17:                                               ; preds = %3
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %31, label %22

22:                                               ; preds = %17
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %24 = load i32*, i32** %9, align 8
  %25 = load i32**, i32*** %7, align 8
  %26 = call i32 @add_parents_to_list(%struct.TYPE_4__* %23, i32* %24, i32** %25)
  store i32 %26, i32* %8, align 4
  %27 = icmp slt i32 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %22
  %29 = load i32, i32* %8, align 4
  store i32 %29, i32* %4, align 4
  br label %34

30:                                               ; preds = %22
  br label %31

31:                                               ; preds = %30, %17
  %32 = load i32*, i32** %9, align 8
  %33 = load i32**, i32*** %5, align 8
  store i32* %32, i32** %33, align 8
  store i32 0, i32* %4, align 4
  br label %34

34:                                               ; preds = %31, %28, %14
  %35 = load i32, i32* %4, align 4
  ret i32 %35
}

declare dso_local i32* @git_commit_list_pop(i32**) #1

declare dso_local i32 @git_error_clear(...) #1

declare dso_local i32 @add_parents_to_list(%struct.TYPE_4__*, i32*, i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
